# Krang-Software

drivers/amc/: .gitignore  CMakeLists.txt  amccan.c  amcdrive.c  amciod.c
drivers/amc/include/: amccan.h  amcdrive.h  byteorder.h
drivers/imu/: Makefile  README  imu_listen_and_print  imu_listen_and_print.c  imud  imud.c  ssdmu.c
drivers/imu/include/: imud.h
drivers/imu/include/ssdmu/: ssdmu.h
drivers/joystick/: .gitignore  AUTHORS  Makefile  Makefile.am  README  configure.ac  jachd  jachd.c
drivers/joystick/.deps/: jachd.Po  js.Po
drivers/krang-waist/: CMakeLists.txt  krang-waist.cpp  krang-waist.h  torso.cpp
drivers/pcio/: .gitignore  CMakeLists.txt  README  code.c  pcio.c  pcio_util.c  pciod.c
drivers/pcio/include/: pcio.h  pciod.h
lib/filter/: CMakeLists.txt  Makefile  filter.c  filter.h  imu-data  kalman.f90  testKalmanReal.cpp  testKalmanSimulated.cpp
lib/make-common/: Makefile  common.1.mk
lib/somatic/: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  README  proto_gen.sh
lib/somatic/.deps/: daemon.Plo  motor.Plo  msg.Plo  sbeep.Po  sjstel.Po  slogd.Po  sns.Po  somatic.pb-c.Plo  somatic_dump.Po  somatic_exampled.Po  somatic_live_plot.Po  somatic_motor_plot.Po  somatic_motor_plot_argp.Po  somatic_util.Plo
lib/somatic/.libs/: libsomatic.la  libsomatic.lai  libsomatic.so.0.0.0  sbeep  sjstel  slogd  sns  somatic_dump  somatic_exampled  somatic_live_plot  somatic_motor_plot
lib/somatic/cmake/: cpack.cmake
lib/somatic/etc/init.d/: somatic
lib/somatic/exe/: sbeep.c  sjstel.c  slogd.c  sns.c  somatic_dump.c  somatic_exampled.c  somatic_live_plot.c  somatic_motor_cmd.cpp  somatic_motor_plot.cpp
lib/somatic/include/: somatic.h
lib/somatic/include/somatic/: daemon.h  motor.h  msg.h  util.h
lib/somatic/proto/: somatic.proto
lib/somatic/src/: daemon.c  motor.c  msg.c  util.c
project/krang/demos/: README.txt
project/krang/demos/balancing/: CMakeLists.txt  gains.txt
project/krang/demos/balancing/exe/: 00-balance.cpp.ign  01-balance-kore.cpp  03-balance-kore-disturbance-reject.cpp
project/krang/demos/balancing/src/: balancing.h  helpers.cpp  helpers.h  lqr.cpp  lqr.h  simTab.h
project/krang/demos/sensors/: CMakeLists.txt  sensors.cpp  simTab.h  ssdmu.c
project/krang/demos/sensors/scenes/: 01-World-Robot.urdf  Krang.urdf  KrangBlocks.urdf  KrangBlocksHands.urdf  bracket.dae  greenArrow.urdf  redPoint.urdf  testObject.urdf
project/krang/demos/sensors/scenes/Schunk/: L7.dae
project/krang/demos/sensors/scenes/objects/: greenArrow.blend1  greenArrow.dae
project/krang/experiments/: .gitignore  README.txt
project/krang/experiments/balancing/: .gitignore  CMakeLists.txt  README  gains.txt
project/krang/experiments/balancing/doc/: history_tuning
project/krang/experiments/balancing/exe/: 00-simpleSineCurrent.cpp  01-massTable.cpp  04-calibration.cpp  05-vx.cpp  06-fx.cpp
project/krang/experiments/balancing/exe/old/: 06-wheelComply.cpp  07-bla.cpp  08-allModes.cpp
project/krang/experiments/balancing/matlab/: 1kg-01  hand-04  plotWheelComply.m
project/krang/experiments/balancing/src/: helpers.cpp  helpers.h  simTab.h
project/krang/experiments/collision/: 01-penetration-depth.cpp  CMakeLists.txt
project/krang/experiments/common/: motion.h
project/krang/experiments/common/scenes/: Krang.urdf
project/krang/experiments/common/visualizer/: CMakeLists.txt  krang-vis-tab.cpp  krang-vis-tab.hpp
project/krang/experiments/compliance/: CMakeLists.txt
project/krang/experiments/compliance/data/: simple.m
project/krang/experiments/compliance/exe/: 01-gripperWeight.cpp  02-correction.cpp  03-estimation.cpp  03b-estimation.cpp  04-gripVis.cpp  05-jInv.cpp  06-simpleComply.cpp  07-modelError.cpp  (+1 more)
project/krang/experiments/current_control/: CMakeLists.txt
project/krang/experiments/ft/: CMakeLists.txt  README.txt
project/krang/experiments/grippers/: CMakeLists.txt
project/krang/experiments/grippers/exe/: 01-move.cpp  02-position.cpp  03-grasp.cpp  04-robotiqd.cpp
project/krang/experiments/kinematics/: .gitignore  CMakeLists.txt  README.txt
project/krang/experiments/kinematics/exe/: 01-dart.cpp  02-forward.cpp
project/krang/experiments/kinematics/src/: helpers.cpp  helpers.h
project/krang/experiments/kinematics/tests/: CMakeLists.txt  testBracketKinectTransform.cpp
project/krang/experiments/manipulation/: CMakeLists.txt
project/krang/experiments/navigation/: CMakeLists.txt
project/krang/experiments/twoHands/: CMakeLists.txt
project/krang/kore/: .gitignore  CMakeLists.txt
project/krang/kore/etc/: README.txt
project/krang/kore/etc/model/: Krang.urdf
project/krang/kore/etc/objects/: blueCubeObject.urdf  blueRect.urdf  box.urdf  boxSmall.urdf  cinder.urdf  cup.urdf  fulcrum.urdf  greenArrow.urdf  lever.urdf  obstacle.urdf  plane.urdf  plate.urdf  redPoint.urdf  sitBox.urdf  table.urdf  testObject.urdf  valve.urdf
project/krang/kore/etc/objects/mesh/: cinder.dae  plate.dae
project/krang/kore/etc/objects/mesh/Solidworks/: cinder.SLDPRT  plate.SLDPRT
project/krang/kore/etc/scenes/: 00-World-Test.urdf  01-World-Robot.urdf  02-World-Collision.urdf  03-World-IK.urdf  04-World-Grasp.urdf  05-World-Teleop.urdf  06-World-Lever.urdf  07-World-Object.urdf  08-World-Load.urdf  09-World-RotateLever.urdf  10-World-Door.urdf  11-World-LeverShort.urdf  12-World-LeverCinder.urdf  13-World-Plates.urdf
project/krang/kore/etc/scenes/configs/: 01-standUp.config  02-sitting.config  03-wedge.config
project/krang/kore/include/: kore.hpp
project/krang/kore/include/kore/: display.hpp  ik.hpp  safety.hpp  sensors.hpp  simTab.hpp  util.hpp  visualization.hpp  workspace.hpp
project/krang/kore/src/: display.cpp  ik.cpp  kore.cpp  safety.cpp  sensors.cpp  util.cpp  workspace.cpp
project/krang/util/: .gitignore  README
project/krang/util/home/: CMakeLists.txt  README  home.cpp
project/krang/util/home/.deps/: homing.cpp.d  homing_old.cpp.d  position-adjust.cpp.d
project/krang/util/scripts/: README.txt  achs  getAchs.sh  krang-internet-fixer  krang-power  putAchs.sh
project/krang/util/stop/: CMakeLists.txt  stop.cpp
(+109 files in other folders)
